Simplify application, and use plain bootstrap, not flask-bootstrap.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,2 @@
-﻿asn1crypto==0.24.0
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-cryptography==2.7
-dominate==2.4.0
-Flask==1.1.1
-Flask-Bootstrap==3.3.7.1
-Flask-WTF==0.14.2
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-pycparser==2.19
-python-dateutil==2.8.0
-requests==2.22.0
-six==1.12.0
+﻿Flask==1.1.1
 stravalib==0.10.2
-urllib3==1.25.3
-visitor==0.1.3
-Werkzeug==0.15.5
-WTForms==2.2.1
