--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,9 @@ strategy:
     Python36:
       python.version: '3.6'
 
+variables:
+  STRAVA_ACCESS_TOKEN: $(STRAVA_ACCESS_TOKEN)
+
 steps:
 - task: UsePythonVersion@0
   displayName: 'Use Python $(python.version)'
