--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,3 +41,9 @@ steps:
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
+
+- task: AzureWebAppContainer@1
+  inputs:
+    azureSubscription: 'Pay-As-You-Go(7b125e82-6ca5-4623-87af-3df07832d24b)'
+    appName: 'my-heatmap'
+    containers: 'rafaelschlatter/stravaheatmap:latest'
