Schedule daily build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,16 @@ trigger:
   - master
   - dev
   
+schedules:
+  - cron: "0 0 * * *"
+    displayName: Daily midnight build
+    branches:
+      include:
+        - master
+        - de
+
+    always: true
+
 pool:
   vmImage: 'ubuntu-latest'
 
