Remove storage account dependency in css."

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 venv
 env
+.env
 notebooks
 .DS_Store
 .vscode
 .env
 Capture.PNG
 close-up.PNG
-*.jpg
 *.pyc
 *__pycache__
 examples/.ipynb_checkpoints
