--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,8 @@
 trigger:
-  - master
-  
+  branches:
+    include:
+      - master
+
 schedules:
   - cron: "0 1 * * *"
     displayName: 'Daily midnight build'
